force-app/main/default/objects/Ticket_Configuration__mdt/Ticket_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Ticket Configuration</label>
    <pluralLabel>Ticket Configurations</pluralLabel>
</CustomObject>