force-app/main/default/objects/Ticket_Configuration__mdt/fields/activationDate__c.field-meta.xml
<CustomField>
    <fullName>activationDate__c</fullName>
    <label>activationDate</label>
    <type>DateTime</type>
</CustomField>