force-app/main/default/objects/Ticket_Configuration__mdt/fields/active__c.field-meta.xml
<CustomField>
    <fullName>active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active?</label>
    <type>Checkbox</type>
</CustomField>