force-app/main/default/objects/Ticket_Configuration__mdt/fields/expiryDate__c.field-meta.xml
<CustomField>
    <fullName>expiryDate__c</fullName>
    <label>expiryDate</label>
    <type>DateTime</type>
</CustomField>